2026-02-17  G. Branden Robinson <g.branden.robinson@gmail.com>

	Eliminate new but superfluous Automake variable.

	* configure.ac: Drop `AM_CONDITIONAL()` defining `GROPDF_INTER`,
	which is confusingly named (it meant "not the basic service
	level", not the "inter[mediate]" one specifically), not directly
	coupled to the availability of a feature of the build host (but
	instead based on the value of a shell variable that _was_ being
	used just for reporting, and with this commit is again limited
	to that purpose), and duplicates the semantics of an existing
	Automake variable, `HAVE_GHOSTSCRIPT`.  See the definition of
	`GROFF_GROPDF_DEPENDENCIES_CHECK` in "m4/groff.m4".
	* font/devpdf/devpdf.am: Append to macro
	`devpdffont_descriptions_from_devps` contingently on Automake
	variable `HAVE_GHOSTSCRIPT` rather than the disappearing
	`GROPDF_INTER`.

2026-01-20  Deri James  <deri@chuzzlewit.myzen.co.uk>

	Install groff fonts according to gropdf mode.

	Full         : All 35 Postscript 2 fonts + 35 URW fonts
	Intermediate : All 35 Postscript 2 fonts
	Basic        : Just 14 PDF standard fonts

	(Reinstates groff 1.23.0 behaviour).

	* configure.ac: Add automake conditional GROPDF_INTER. Set if
	not in basic mode.

	* font/devpdf/devpdf.am: Split groff fonts list into 3 so that
	the 3 modes above can be accommodated, based on the two automake
	conditionals GROPDF_INTER and HAVE_URW_FONTS.

	* m4/groff.m4: Fix logic error setting 'gropdf_service_level'.

	Fixes <https://savannah.gnu.org/bugs/index.php?68060>

2026-02-12  G. Branden Robinson <g.branden.robinson@gmail.com>

	Add another URW font directory search path.

	* font/devpdf/Foundry.in:
	* m4/groff.m4 (GROFF_URW_FONTS_CHECK): Add
	"/usr/share/fonts/type1" directory to search path for URW font
	files.  That is apparently (yet another?) location Arch Linux
	keeps them in.

	Continues fixing <https://savannah.gnu.org/bugs/?65974>.  Thanks
	to Morten Bo Johansen for the report in <https://lists.gnu.org/\